# cryoET

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml
cryoet/: __main__.py  helpers.py  preprocessing.py  visualizations.py
data/demo/overlay/ExperimentRuns/TS_5_4/Picks/: apo-ferritin.json
tests/: test_helpers.py  test_preprocessing.py
tests/data/: valid_json.json
tests/data/TS_5_4/: apo-ferritin.json  beta-amylase.json
